tests/rascal/negative/parse_errors/L2/case-of.ob
MODULE Bla;

BEGIN
  CASE x 
  END

END Bla.